--- a/index.html
+++ b/index.html
@@ -14,32 +14,174 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="card">
-      <div class="upper">
-        <h2>Free</h2>
-        <p class="text">Try Claude</p>
+    <div class="container">
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
 
-        <ul>
-          <li class="item">
-            <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
-          </li>
-          <li class="item">
-            <i class="fa-solid fa-circle-check"></i>Generate code and visualize
-            data
-          </li>
-          <li class="item">
-            <i class="fa-solid fa-circle-check"></i>Write, edit and create
-            conetnt
-          </li>
-          <li class="item">
-            <i class="fa-solid fa-circle-check"></i>Analyse text and images
-          </li>
-        </ul>
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
       </div>
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
 
-      <div class="lower">
-        <h2>$0</h2>
-        <p class="text">Free for everyone</p>
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
+
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
+
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
+
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="upper">
+          <h2>Free</h2>
+          <p class="text">Try Claude</p>
+
+          <ul>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Chat on Web, iOS,Android
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Generate code and
+              visualize data
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Write, edit and create
+              conetnt
+            </li>
+            <li class="item">
+              <i class="fa-solid fa-circle-check"></i>Analyse text and images
+            </li>
+          </ul>
+        </div>
+
+        <div class="lower">
+          <h2>$0</h2>
+          <p class="text">Free for everyone</p>
+        </div>
       </div>
     </div>
   </body>
