--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 class="title">Make Difference With Us!</h1>
     <div class="container">
       <div class="card">
         <div class="upper">
@@ -184,5 +185,25 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="links">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Company</a></li>
+          <li><a href="#">Culture</a></li>
+          <li><a href="#">Showcases</a></li>
+        </ul>
+
+        <div class="icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-youtube"></i> 
+         </div>
+      </div>
+    </footer>
   </body>
 </html>
